JumpScript/tests/baselines/reference/parserErrorRecovery_Block2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.jump(2,5): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.jump (1 errors) ====
    function f() {
        #
        
!!! error TS1127: Invalid character.
        return;
    }